--- a/app/src/main/res/layout/target_item.xml
+++ b/app/src/main/res/layout/target_item.xml
@@ -64,7 +64,7 @@
         android:id="@+id/overlay_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginTop="8dp"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
