Change overall action buttons to icons with tooltips

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/title_border"
             app:layout_constraintBottom_toTopOf="@id/button_bar_border"
+            tools:listitem="@layout/target_item"
             />
 
         <View
@@ -74,40 +75,57 @@
         <LinearLayout
             android:id="@+id/change_all_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?listPreferredItemHeightSmall"
             android:gravity="center_horizontal"
             android:visibility="gone"
             android:orientation="horizontal"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="72dp"
             app:layout_constraintTop_toBottomOf="@id/match_overlays"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible">
 
-            <com.google.android.material.button.MaterialButton
+            <tk.zwander.overlaymanager.views.TooltippedImageButton
                 android:id="@+id/enable_all"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/enable_all"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/ic_baseline_playlist_add_check_24"
+                android:background="?android:selectableItemBackground"
+                android:tooltipText="@string/enable_all"
+                android:contentDescription="@string/enable_all"
                 />
 
-            <com.google.android.material.button.MaterialButton
+            <tk.zwander.overlaymanager.views.TooltippedImageButton
                 android:id="@+id/disable_all"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/disable_all"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/playlist_remove"
+                android:background="?android:selectableItemBackground"
+                android:tooltipText="@string/disable_all"
+                android:contentDescription="@string/disable_all"
                 />
 
-            <com.google.android.material.button.MaterialButton
+            <tk.zwander.overlaymanager.views.TooltippedImageButton
                 android:id="@+id/expand_all"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/expand_all"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/arrow_expand_vertical"
+                android:background="?android:selectableItemBackground"
+                android:tooltipText="@string/expand_all"
+                android:contentDescription="@string/expand_all"
                 />
 
-            <com.google.android.material.button.MaterialButton
+            <tk.zwander.overlaymanager.views.TooltippedImageButton
                 android:id="@+id/collapse_all"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/collapse_all"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/arrow_collapse_vertical"
+                android:background="?android:selectableItemBackground"
+                android:tooltipText="@string/collapse_all"
+                android:contentDescription="@string/collapse_all"
                 />
 
         </LinearLayout>
